AWS EKS/07-Nginx_Ingress_Controller_in_EKS/Nginx Ingress Controller in EKS/example-2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: 9-example
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
  selector:
    app: myapp
