AWS EKS/07-Nginx_Ingress_Controller_in_EKS/Nginx Ingress Controller in EKS/example-2/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: 9-example
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: external-nginx
  rules:
  - host: ex9.fenilgajjar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 8080
  tls:
  - hosts:
    - ex9.fenilgajjar.com
    secretName: ex9-fenilgajjar-com
